connect to databasepandadb on aws

--- a/.env
+++ b/.env
@@ -12,10 +12,9 @@ USERNAME_GMAIL = quanvujs1990@gmail.com
 PASSWORD_UD_GMAIL = nznvpwqonkkfbhnn
 
 
-# Google Cloud SQL Server online - production
-DB_HOST=34.67.230.109
+# AWS SQL Server online - production
+DB_HOST=databasepandadb.cf4wymoyan17.us-east-2.rds.amazonaws.com
 DB_PORT=1433
-DB_USER=sqlserver
-DB_PASSWORD=evenhubfully123456
-DB_NAME=evenhubDB
-DB_CONNECTION_NAME=evenhubfully-450304:us-central1:evenhubfully
+DB_USER=admin
+DB_PASSWORD=Ghfshtfh69916571
+DB_NAME=databasepandadb
